--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ button a{
 button:hover {
     background-color: #f39c12;
     transform: scale(1.2);
-    box-shadow: 0px 0px 10px #f1c40f;
+    box-shadow: 0px 0px 10px red;
 }
 
 footer {
