--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,12 @@ nav li{
     list-style-type: none;
     display: inline;
     padding: 10px;
+    transition: 400ms ease-in;
 }
-
+nav li:hover{
+    box-shadow: 0px 0px 10px red;
+    border-radius: 5px;
+}
 nav a{
     text-decoration: none;
     color: crimson;
